k8s/ace-rp/kustomize/ace-rp/overlays/local/ace-rp/benefits-dept/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: benefits-dept-ace-rp
  labels:
    app: benefits-dept-ace-rp
spec:
  tls:
  - hosts:
      - BENEFITS_DEPT_RP_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: BENEFITS_DEPT_RP_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: BENEFITS_DEPT_RP_SERVICE_NAME
            port:
              name: http
